connect to backend

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,11 @@
     <div
       class="flex item-center justify-center p-8 rounded-lg shadow-lg w-full max-w-md"
     >
-      <form class="space-y-4 bg-zinc-800 rounded-lg p-5 text-white" action="/register" method="post">
+      <form
+        class="space-y-4 bg-zinc-800 rounded-lg p-5 text-white"
+        action="/register"
+        method="post"
+      >
         <h3 class="text-3xl font-bold flex justify-center mb-5">
           Create An Account
         </h3>
@@ -50,7 +54,7 @@
           type="submit"
           value="Create Account"
         />
-        <div class="mt-5" >
+        <div class="mt-5">
           <a href="/login" class="text-blue-600">Already have an account</a>
         </div>
       </form>
